--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,10 @@
 # roles/hosts/defaults/main.yml
 ---
 
+hosts_file: /etc/hosts
+
+hosts_ansible_network_interface: "ansible_{{ hosts_network_interface }}"
+
 hosts_playbook_version: "1.0.1"
 
 # If set to true, an entry for `ansible_hostname`, bound to the host's default IPv4 address is added added.
