--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,14 @@
 # roles/hosts/tasks/main.yml
 ---
 
-- name: Install custom hosts file
+- name: Install custom {{ hosts_file }} file
   template:
-    src: etc_hosts.j2
+    src: etc/hosts.j2
     dest: "{{ hosts_file }}"
     owner: root
     group: root
     mode: 0644
     backup: "{{ host_file_backup }}"
+  become: true
+  notify: hosts changed
   tags: hosts
